--- a/playaround-video.html
+++ b/playaround-video.html
@@ -101,8 +101,7 @@
 
 				loadingControl: $('#loading'),
 				prevPageControl: $('#prev-page'),
-				nextPageControl: $('#next-page'),,
-				pageControlDisabledClass: true,
+				nextPageControl: $('#next-page'),
 				mediaViewer: $('#media-viewer'),
 				templates: {
 					thumbnail: '<img src="{{image_medium}}">'
