--- a/index.html
+++ b/index.html
@@ -8,5 +8,19 @@
 </head>
 <body>
 	
+<div id="container"></div>
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+<script type="text/javascript">
+	$(document).ready(function() {
+		var container = $('#container');
+
+		container.load('https://cdn.rawgit.com/kamikameha/playaround/master/playaround-video.html');
+	});
+	
+</script>
+
 </body>
 </html>
